Service.yml
apiVersion: v1
kind: Service
metadata:
  name: hw2-service
spec:
  type: NodePort
  selector:
    app: hw2-health
  ports:
    - name: http
      protocol: TCP
      port: 8000
      targetPort: hw2-health-port
